# quadpype

./: .all-contributorsrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.centos7  Dockerfile.debian  HISTORY.md  LICENSE  README.md  extension.zxp  inno_setup.iss  pyproject.toml  setup.cfg  setup.py  start.py  test.py
source/: pyproject.toml  setup.py
source/igniter/: install_dialog.py  message_dialog.py  user_settings.py  version.py
source/quadpype/: version.py
source/quadpype/client/mongo/: entities.py
source/quadpype/hooks/: pre_create_extra_workdir_folders.py  pre_foundry_apps.py  pre_mac_launch.py
source/quadpype/hosts/aftereffects/: addon.py
source/quadpype/hosts/aftereffects/api/: pipeline.py  ws_stub.py
source/quadpype/hosts/blender/api/: render_lib.py
source/quadpype/hosts/blender/hooks/: pre_add_install_custom_addons.py  pre_windows_console.py
source/quadpype/hosts/flame/api/: plugin.py  workio.py
source/quadpype/hosts/flame/hooks/: pre_flame_setup.py
source/quadpype/hosts/fusion/api/: lib.py  menu.py  pulse.py
source/quadpype/hosts/harmony/api/: __init__.py  plugin.py
source/quadpype/hosts/hiero/api/: constants.py  lib.py
source/quadpype/hosts/houdini/api/: lib.py  pipeline.py  usd.py
source/quadpype/hosts/max/api/: action.py
source/quadpype/hosts/max/hooks/: force_startup_script.py
source/quadpype/hosts/max/startup/: startup.ms  startup.py
source/quadpype/hosts/maya/api/: alembic.py  fbx.py  lib.py  lib_rendersettings.py  workfile_template_builder.py
source/quadpype/hosts/nuke/api/: actions.py  push_to_project.py
source/quadpype/hosts/nuke/startup/: custom_write_node.py  menu.py  write_to_read.py
source/quadpype/hosts/openrv/: addon.py
source/quadpype/hosts/openrv/api/: commands.py
source/quadpype/hosts/openrv/hooks/: pre_setup_openrv.py
source/quadpype/hosts/photoshop/api/: README.md  lib.py  plugin.py
source/quadpype/hosts/resolve/api/: pipeline.py
source/quadpype/hosts/substancepainter/: addon.py
source/quadpype/hosts/traypublisher/: addon.py
source/quadpype/hosts/traypublisher/api/: pipeline.py
source/quadpype/hosts/tvpaint/api/: lib.py
source/quadpype/hosts/webpublisher/: addon.py  publish_functions.py
source/quadpype/lib/: attribute_definitions.py  execute.py  local_settings.py  log.py  path_tools.py  terminal.py  usdlib.py
source/quadpype/modules/: launcher_action.py
source/quadpype/modules/asset_reporter/: window.py
source/quadpype/modules/clockify/launcher_actions/: ClockifySync.py
source/quadpype/modules/deadline/: deadline_module.py
source/quadpype/modules/deadline/repository/: readme.md
source/quadpype/modules/ftrack/: ftrack_module.py
source/quadpype/modules/ftrack/event_handlers_server/: action_push_frame_values_to_task.py  action_sync_to_avalon.py  event_del_avalon_id_from_new.py  event_push_frame_values_to_task.py  event_radio_buttons.py  event_sync_links.py  event_sync_to_avalon.py
source/quadpype/modules/kitsu/: kitsu_module.py
source/quadpype/modules/log_viewer/: log_view_module.py
source/quadpype/modules/python_console_interpreter/: module.py
source/quadpype/modules/shotgrid/: shotgrid_module.py
source/quadpype/modules/slack/: slack_module.py
source/quadpype/modules/sync_server/: README.md  rest_api.py  sync_server.py
source/quadpype/pipeline/: anatomy.py  context_tools.py  legacy_io.py  mongodb.py  thumbnail.py  version_start.py
source/quadpype/pipeline/create/: README.md
source/quadpype/pipeline/farm/: pyblish_functions.pyi
source/quadpype/pipeline/publish/: __init__.py  abstract_collect_render.py
source/quadpype/pipeline/schema/: container-1.0.json  inventory-1.0.json  project-2.0.json  project-3.0.json  representation-2.0.json  shaders-1.0.json  subset-1.0.json  subset-3.0.json
source/quadpype/pipeline/workfile/: lock_workfile.py  workfile_template_builder.py
source/quadpype/plugins/inventory/: remove_and_load.py
source/quadpype/plugins/load/: delete_old_versions.py  open_file.py
source/quadpype/plugins/publish/: collect_custom_staging_dir.py  collect_from_create_context.py  collect_host_name.py  collect_input_representations_to_versions.py  collect_scene_loaded_versions.py  extract_review_slate.py  extract_thumbnail_from_source.py  integrate_subset_group.py  validate_editorial_asset_name.py  validate_intent.py
source/quadpype/scripts/: non_python_host_launch.py
source/quadpype/settings/: __init__.py  lib.py
source/quadpype/settings/entities/: __init__.py  anatomy_entities.py  dict_immutable_keys_entity.py  input_entities.py  root_entities.py
source/quadpype/tests/: mongo_performance.py  test_avalon_plugin_presets.py  test_lib_restructuralization.py
source/quadpype/tools/assetlinks/: widgets.py
source/quadpype/tools/attribute_defs/: files_widget.py
source/quadpype/tools/creator/: model.py
source/quadpype/tools/launcher/: delegates.py
source/quadpype/tools/loader/: __main__.py  model.py
source/quadpype/tools/push_to_project/: control_integrate.py
source/quadpype/tools/pyblish_pype/: mock.py  model.py  view.py
source/quadpype/tools/standalonepublish/: publish.py
source/quadpype/tools/subsetmanager/: README.md  model.py
source/quadpype/tools/tray/: pype_tray.py
source/quadpype/tools/utils/: __init__.py  host_tools.py
source/quadpype/tools/workfiles/: files_widget.py
source/quadpype/widgets/: README.md  popup.py  tool_windows.py
source/quadpype/widgets/color_widgets/: color_inputs.py
source/tests/: README.md
source/tests/unit/igniter/: test_bootstrap_repos.py
source/toolkit_dev/activate/windows/: activate.ps1
source/toolkit_dev/database/_common/: erase_pipe_databases.js
source/toolkit_dev/database/windows/: fetch_mongo.ps1
source/toolkit_dev/install/_common/: install_additional_dependencies.py
source/toolkit_dev/install/windows/: install_env.ps1
source/toolkit_dev/run/_common/: pre_run.py
source/toolkit_dev/run/windows/: pre_run.ps1  run.ps1
source/toolkit_dev/unix/: run_tray.sh
source/toolkit_dev/zxp/windows/: generate_zxp.ps1
(+3294 files in other folders)
